--- a/client/src/fr/gauthierth/messageriejava/ChannelsWindow.form
+++ b/client/src/fr/gauthierth/messageriejava/ChannelsWindow.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ChannelsWindow">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.gauthierth.messageriejava.ChannelsWindow">
   <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
